--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -322,6 +322,12 @@ select {
   background-color: rgba(112, 118, 131, 0.15);
 }
 
+.no-transactions--text {
+  font-size: 1.8rem;
+  text-align: center;
+  padding: 4rem 1.8rem;
+}
+
 .table-footer {
   background-color: rgba(112, 118, 131, 0.08);
   padding: 1.2rem 1.8rem;
