--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,7 +65,6 @@ body {
   width: fit-content;
   cursor: pointer;
   transition: all 0.3s ease-in;
-  margin-top: auto;
 }
 
 .btn:hover {
@@ -199,8 +198,12 @@ body {
 }
 
 .display-screen {
-  height: 100%;
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
+}
+
+.display-screen::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
 }
 
 .display-screen h2 {
